--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.yungseepferd.github.io; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://cdn.jsdelivr.net https://api.emailjs.com; style-src 'self' 'unsafe-inline' data:; font-src 'self' data:; img-src 'self' data: https:; connect-src 'self' https://www.google-analytics.com https://api.emailjs.com; frame-src 'none';" />
+    <meta http-equiv="Content-Security-Policy" content="default-src 'self' https://*.yungseepferd.github.io; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://www.googletagmanager.com https://cdn.jsdelivr.net https://api.emailjs.com; style-src 'self' 'unsafe-inline' data:; font-src 'self' data:; img-src 'self' data: https:; connect-src 'self' ws://127.0.0.1:* wss://127.0.0.1:* https://www.google-analytics.com https://api.emailjs.com; frame-src 'none';" />
     <meta
       name="description"
       content="Vincent Göke UX Portfolio Website"
